<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_score"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Asteroides" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/title_app"
        android:textSize="25sp"
        android:layout_marginBottom="20dip"
        style="@style/TextoAsteroides" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_play"
        style="@style/TextoAsteroides.Botones" />

    <Button
        android:id="@+id/button2"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarPreferencias"
        android:text="@string/btn_config" />

    <Button
        android:id="@+id/button3"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_about" />

    <Button
        android:id="@+id/button4"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarPuntuaciones"
        android:text="@string/btn_score" />

    <Button
        android:id="@+id/button5"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="finishApp"
        android:text="@string/btn_exit" />

</LinearLayout>